// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch KILTs > Switch V4 LIVE: Kilt -> AssetHub -> Kilt > Receive native funds on foreign chain {"section":"assetSwitchPool1","method":"RemoteToLocalSwitchExecuted"} 1`] = `[]`;

exports[`Switch KILTs > Switch V4 LIVE: Kilt -> AssetHub -> Kilt > Transfer native funds from native chain {"section":"assetSwitchPool1","method":"LocalToRemoteSwitchExecuted"} 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "from": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
      "to": {
        "V4": {
          "interior": {
            "X1": [
              {
                "AccountId32": {
                  "id": "(hash)",
                  "network": null,
                },
              },
            ],
          },
          "parents": 0,
        },
      },
    },
    "method": "LocalToRemoteSwitchExecuted",
    "section": "assetSwitchPool1",
  },
]
`;

exports[`Switch KILTs > Switch V4 LIVE: Kilt -> AssetHub -> Kilt > Transfer native funds from native chain {"section":"fungibles","method":"Burned"} 1`] = `
[
  {
    "data": {
      "assetId": {
        "interior": "Here",
        "parents": 1,
      },
      "balance": 5000000000,
      "owner": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "Burned",
    "section": "fungibles",
  },
]
`;

exports[`Switch KILTs > Switch V4 LIVE: Kilt -> AssetHub -> Kilt > receive foreign funds on native chain {"section":"fungibles","method":"Issued"} 1`] = `
[
  {
    "data": {
      "amount": "(rounded 10000000000)",
      "assetId": {
        "interior": "Here",
        "parents": 1,
      },
      "owner": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "Issued",
    "section": "fungibles",
  },
]
`;

exports[`Switch KILTs > Switch V4 LIVE: Kilt -> AssetHub -> Kilt > receive foreign funds on native chain {"section":"messageQueue","method":"Processed"} 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 1000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": 0,
        "refTime": 1000000000,
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`Switch KILTs > Switch V4 LIVE: Kilt -> AssetHub -> Kilt > transfer foreign funds from foreign chain {"section":"polkadotXcm","method":"Sent"} 1`] = `
[
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": "(rounded 2100)",
            },
          ],
        },
        "parents": 1,
      },
      "message": [
        {
          "ReserveAssetDeposited": [
            {
              "fun": {
                "Fungible": 10000000000,
              },
              "id": {
                "interior": "Here",
                "parents": 1,
              },
            },
          ],
        },
        "ClearOrigin",
        {
          "BuyExecution": {
            "fees": {
              "fun": {
                "Fungible": 10000000000,
              },
              "id": {
                "interior": "Here",
                "parents": 1,
              },
            },
            "weightLimit": "Unlimited",
          },
        },
        {
          "DepositAsset": {
            "assets": {
              "Wild": {
                "AllCounted": 1,
              },
            },
            "beneficiary": {
              "interior": {
                "X1": [
                  {
                    "AccountId32": {
                      "id": "(hash)",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": "Polkadot",
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "polkadotXcm",
  },
]
`;
